# sinope

./: .gitignore  README.md  pyproject.toml
examples/: hello_world.ipynb
src/sinope/: __init__.py  sinope_kernel.py  sinope_parser.py
tests/: test_parser.py
